style: Sidebar/Artworks divider alignment fix

--- a/pages/[user]/User.module.scss
+++ b/pages/[user]/User.module.scss
@@ -95,7 +95,7 @@
   &__sidebar {
     flex: 25%;
     // margin-right: 10rem;
-    padding: 2.5rem 3rem 0 0px;
+    padding: 3.7rem 3rem 0 0px;
     &-section {
       margin-bottom: 9.4rem;
       h3 {
